--- a/tutorial.html
+++ b/tutorial.html
@@ -6,23 +6,49 @@
     <title>Right Sidebar Navigation</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body bgcolor="#09122C" >
 
     <!-- Main Content -->
     <div class="main-content">
-        <h1>DevConnect Forum</h1>
-        <p>Welcome to the educational platform for IT students!</p>
+        <h1>Tutorials</h1>
+        <p>Welcome to the educational tutorials for IT students!</p>
+        <br>
+
+        <p>Python</p>
+
+        <iframe width="230" height="150" src="https://www.youtube.com/embed/ix9cRaBkVe0?si=3N2aeZkpmIyO0ebo" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen >
+        </iframe>
+
+        <iframe width="230" height="150" src="https://www.youtube.com/embed/eWRfhZUzrAc?si=0DKwnV9gaLW5wiuy" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
+
+        <iframe width="230" height="150" src="https://www.youtube.com/embed/mRMmlo_Uqcs?si=42RvbQUE9Su7wpxT" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
+
     </div>
 
     <!-- Right Sidebar -->
     <nav class="sidebar">
+        <h1>DevConnect<img src="assets/rocket.svg" height="20px"></h1>
         <p id="Navigation">Navigation<p>
         <ul>
-            <li><a href="#"><img src="assets/dashboard.svg">Dashboard</a></li>
-            <li><a href="#">Forum</a></li>
-            <li><a href="#">Tutorials</a></li>
-            <li><a href="#">Lecture Notes</a></li>
+            <li><a href="#"><img src="assets/dashboard.svg" height="20px"  >Dashboard</a></li>
+            <li><a href="#"><img src="assets/forumsalt.svg" height="20px">Forum</a></li>
+            <li><a href="#"><img src="assets/code.svg" height="20px">Tutorials</a></li>
+            <li><a href="#"><img src="assets/school.svg">Lecture Notes</a></li>
         </ul>
+
+        <div class="sidebar-bottom">
+            <a href="#" class="account-btn">
+                <img src="assets/user-circle.svg" alt="Account"> Account
+            </a>
+        </div>
     </nav>
 
 </body>
