tutorial page completed
tutorial page completed with HTML and CSS

add links to menu

--- a/tutorial.html
+++ b/tutorial.html
@@ -1,12 +1,26 @@
+
+<!----------------------- This is Tutorial page  -------------------------->
+
+<!----------------------- last edit: Geenod 25/03/27 -------------------------->
+
+
+
+<!----------------------- 
+                 
+                 tutorial page completed with HTML and CSS 
+                 add links to menu 
+                                                              -------------------------->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Right Sidebar Navigation</title>
+    <title>Tutorial</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body bgcolor="#09122C" >
+
 
     <!-- Main Content -->
     <div class="main-content">
@@ -31,6 +45,44 @@
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
         </iframe>
 
+        <p>Java</p>
+
+        <iframe width="230" height="150" src="https://www.youtube.com/embed/eIrMbAQSU34?si=_XPJ7iZi9TCNg4nb" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
+
+        <iframe width="230" height="150" src="https://www.youtube.com/embed/A74TOX803D0?si=jksBkQ_9nuWC-Fl5" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
+
+        <iframe width="230" height="150" src="https://www.youtube.com/embed/4XTsAAHW_Tc?si=6Q0VWj3nbHk3d6bM" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
+
+        <p>Web Development</p>
+
+        <iframe width="230" height="150" src="https://www.youtube.com/embed/nu_pCVPKzTk?si=0qe2wHyW9Mp_HjAc" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
+
+        <iframe width="230" height="150" src="https://www.youtube.com/embed/kUMe1FH4CHE?si=oSqxeXIdpMt2iH1O" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
+
+        <iframe width="230" height="150" src="https://www.youtube.com/embed/CgkZ7MvWUAA?si=q7nQ3YJ2MxWtV6gE" 
+        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+        </iframe>
+
+
+           <!----------------------- Add more videos with {width="230" height="150" } iframe -------------------------->
+
+
     </div>
 
     <!-- Right Sidebar -->
@@ -53,3 +105,6 @@
 
 </body>
 </html>
+
+
+           <!----------------------- last edit: Geenod 25/03/27 -------------------------->
