--- a/dashboard.html
+++ b/dashboard.html
@@ -18,6 +18,8 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     display: flex;
+    color: white;
+    background: #1E1E1E;
 }
 
 /* Main Content */
@@ -31,7 +33,7 @@ body {
 
 /* Right Sidebar */
 .sidebar {
-    width: 250px;
+    
     height: 100vh; /* Full height */
     position: fixed;
     top: 0;
